--- a/tiendaVirtualView/src/app/administrador/categoria/categoria.component.html
+++ b/tiendaVirtualView/src/app/administrador/categoria/categoria.component.html
@@ -1,3 +1,18 @@
-<p>
-  categoria works!
-</p>
+
+  <div class="formulario col-md-4 offset-md-4">
+    <form action="/my-handling-form-page" method="post">
+      <div>
+          <label for="name">Name:</label><br>
+          <input type="texto" id="name" />
+      </div>
+      <div>
+          <label for="email">Estado:</label><br>
+          <input type="email" id="email" />
+      </div>
+      <div>
+          <label for="descripcion">Descripción:</label><br>
+          <textarea id="descripcion"></textarea>
+      </div>
+    </form>
+  </div>
+
