--- a/tiendaVirtualView/src/app/app.component.html
+++ b/tiendaVirtualView/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
