--- a/tiendaVirtualView/src/app/app.component.html
+++ b/tiendaVirtualView/src/app/app.component.html
@@ -11,5 +11,7 @@
 <h2>Here are some links to help you start: </h2>
 
 <app-factura></app-factura>
+<app-categoria></app-categoria>
+
 
 <router-outlet></router-outlet>
