--- a/tiendaVirtualView/src/app/administrador/categoria/categoria.component.html
+++ b/tiendaVirtualView/src/app/administrador/categoria/categoria.component.html
@@ -4,18 +4,27 @@
       <div>
           <label for="name">Nombre:</label><br>
           <input type="text" id="name" formControlName="nombre" />
+          <p-message *ngIf="(form.controls.nombre.invalid && form.controls.nombre.touched)" 
+                severity="error" text="El campo es requerido.">
+          </p-message>
       </div>
       <div>
           <label for="estado">Estado:</label><br>
           <input type="text" id="estado" formControlName="estado" />
+          <p-message *ngIf="(form.controls.estado.invalid && form.controls.estado.touched)" 
+                severity="error" text="El campo es requerido.">
+          </p-message>
       </div>
       <div>
           <label for="descripcion">Descripción:</label><br>
           <textarea id="descripcion" formControlName="descripcion"></textarea>
+          <p-message  *ngIf="(form.controls.descripcion.invalid && form.controls.descripcion.touched)" 
+                severity="error" text="El campo es requerido.">
+          </p-message>
       </div>
 
       <button (click)="crearCategorias()" [disabled]="form.invalid">Guardar</button>
-
+      <br/><br/><br/>
 
       <p-table [value]="categorias" [paginator]="true" [rows]="10">
         <ng-template pTemplate="header">
