proceso mensaje crud angular

--- a/tiendaVirtualView/src/app/app.component.html
+++ b/tiendaVirtualView/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 <app-factura></app-factura>
 
-<app-categoria></app-categoria>
+<!-- <app-categoria></app-categoria> -->
 
 
 <router-outlet></router-outlet>
